# k2hr3_get_resource

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ostypevars.sh
buildutils/: APKBUILD.templ.in  Makefile.am  alpine_build_copy.conf  control.in  debian_build.sh  debian_build_copy.conf  k2hr3-get-resource.install  k2hr3-get-resource.post-install  k2hr3-get-resource.postinst  k2hr3-get-resource.pre-deinstall  k2hr3-get-resource.spec.in  rules.in
src/: Makefile.am  k2hr3-get-resource-helper  k2hr3-get-resource-helper.conf  k2hr3-get-resource.service  k2hr3-get-resource.timer  test.sh
tests/: Makefile.am  test.sh
